<resources>
    <string name="app_name">Blablabla</string>
    <string name="title_activity_main">Dialogs</string>
    <!-- Strings related to login -->
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="doesn_t_have_an_account_register_now">Doesn\'t have an account? Register now!</string>
    <string name="new_chat">New dialog</string>
    <string name="log_out">Log out</string>
    <string name="write_message">Write message</string>
    <string name="save_changes">Save changes</string>
    <string name="type_new_password">Type new password</string>
    <string name="current_password">Current password</string>
    <string name="userdata_update">User data updated</string>
    <string name="password_change_failed">Wrong password</string>
    <string name="delete_chatroom">Delete chatroom</string>

    <!--FCM-->
    <string name="default_notification_channel_id" translatable="false">com.example.service.default_notification_channel_id</string>
    <string name="data_type" translatable="false">data_type</string>
    <string name="direct_message" translatable="false">direct_message</string>
    <string name="data_message" translatable="false">message</string>
    <string name="data_title" translatable="false">title</string>
    <string name="data_message_id" translatable="false">message_id</string>
</resources>
